--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,7 +3,7 @@ http {
     server {
         listen 8081;
         location / {
-            proxy_pass http://application:5000;
+            proxy_pass http://homepage:5001;
         }
     }
 }
